<resources>
    <string name="app_name">PestBusters</string>
    <string name="title_home">Home</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pest_busters_title">PEST\nBUSTERS</string>
    <string name="pest_busters_subtitle">Quick Detection, Pests Resolved,\nSuccessful Harvest!</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_button">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="nama_hama">NAMA HAMA</string>
    <string name="detail_hama">Detail Hama</string>
    <string name="tanggal_history">31-12-2024</string>
    <string name="pest_gallery_title">Pest Gallery</string>
    <string name="tutorial_card_desc">Gambar Icon Tutorial</string>
    <string name="tutorial_card_title">TUTORIAL</string>
    <string name="chatbot_card_desc">Gambar icon Bot</string>
    <string name="chatbot_card_title">NARA CHAT</string>
    <string name="history_title">History</string>
    <string name="home_header_greeting">Halo</string>
    <string name="profile_image_desc">Photo Profile</string>
    <string name="fyi_name">Nama FYI</string>
    <string name="fyi_description">FYI Description</string>
    <string name="fyi_title">#FYI</string>
    <string name="fyi">#FYI</string>
    <string name="logout">LOGOUT</string>
    <string name="isiUsername">bunny_juan</string>
    <string name="isiEmail">bunnyjuanda@gmail.com</string>
    <string-array name="data_name">
        <item>Apasih Yang Dimaksud dengan Hama?</item>
        <item>Apa Itu Hidroponik?</item>
        <item>Kenapa Deteksi Dini Hama Itu Penting Banget?</item>
        <item>Seru! Cara Modern Deteksi Hama yang Wajib Kamu Coba</item>
        <item>Hati-Hati! Ini Dampak Hama yang Harus Kamu Tahu</item>
        <item>Keuntungan Pertanian Hidroponik</item>
        <item>Pengenalan Teknologi dalam Pertanian</item>
        <item>Memahami Sistem Hidroponik</item>
        <item>Mengurangi Penggunaan Pestisida</item>
        <item>Masa Depan Pertanian Indonesia</item>
    </string-array>
    <string name="tutorial_title">Tutorial</string>
    <string name="tutorial_description">
        Menu Pest Busters App:
        \n- Home:
        \nIni adalah layar utama tempat Anda memulai eksplorasi di Pest Busters. Di sini, Anda akan menemukan tutorial, NaraBot si chatbot pintar yang siap menjawab pertanyaan tentang hama, serta menu #FYI yang berisi informasi menarik dan bermanfaat tentang hama dan tanaman.

        \n\n- Pest Gallery:
        \nGaleri khusus yang menyediakan informasi mendalam tentang berbagai jenis hama. Anda dapat mempelajari karakteristik, dampak, dan cara mengelola hama-hama ini. Sangat cocok untuk menambah wawasan!

        \n\n- History:
        \nBagian ini menyimpan jejak identifikasi hama yang pernah Anda lakukan. Anda bisa melihat daftar hama yang telah dianalisis, lengkap dengan detail dan waktu identifikasinya.

        \n\n- Profile:
        \nTempat Anda mengelola informasi pribadi. Di sini, Anda dapat melihat nama dan email yang terdaftar, serta menggunakan tombol logout untuk keluar dari aplikasi dengan aman.

        \n\n- FAB Camera:
        \nTombol ikonik berbentuk kamera yang melayang di layar. Dengan satu sentuhan, Anda dapat membuka kamera untuk mulai mengidentifikasi hama atau tanaman di sekitar Anda.

        \n\n\nCara Menggunakan:
        \n1. Login atau Register terlebih dahulu menggunakan email Anda untuk mengakses semua fitur.
        \n2. Setelah berhasil masuk, Anda bisa mulai eksplorasi di menu Home untuk melihat panduan dan bertanya kepada NaraBot.
        \n3. Jika ingin langsung mengidentifikasi hama, tekan tombol FAB Camera. Kamera akan terbuka siap untuk memindai.
        \n4. Arahkan kamera ke hama atau tanaman yang ingin Anda analisis. Pastikan pencahayaannya cukup agar hasil identifikasi lebih akurat.
        \n5. Tunggu beberapa saat, dan Anda akan mendapatkan hasil identifikasi berupa informasi detail tentang hama atau tanaman tersebut.

        \n\nNikmati perjalanan Anda bersama Pest Busters, aplikasi yang dirancang untuk membantu Anda memahami, mengenali, dan mengelola hama dengan cara yang praktis dan menyenangkan!</string>
    <string name="tutorial_image_desc">Image Tutorial</string>
</resources>