<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/icon_pest_gallery"
        android:title="@string/title_gallery" />

    <item
        android:id="@+id/placeholder"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/icon_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/title_profile" />
</menu>