<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <View
        android:id="@+id/view_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/view_separator">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_photo"
                android:layout_width="90dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="@id/data_title"
                app:layout_constraintBottom_toBottomOf="@id/date_text"
                app:layout_constraintStart_toStartOf="parent"
                tools:src="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/data_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/nama_hama"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="#2E7D32"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/img_photo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/detail_hama"
                android:textColor="#616161"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/img_photo"
                app:layout_constraintTop_toBottomOf="@id/data_title"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/icon_calendar"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="Calendar Icon"
                android:src="@drawable/icon_calendar"
                app:layout_constraintEnd_toStartOf="@id/date_text"
                app:layout_constraintTop_toBottomOf="@id/description_text"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_history"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#616161"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/icon_calendar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
